--- a/main.css
+++ b/main.css
@@ -268,7 +268,6 @@ select {
 
 .main {
     margin-left: 100px;
-    margin-top: 0;
 }
 
 .leftside {
@@ -587,7 +586,7 @@ select {
 .top_buttons {
     display: inline-block;
     width: 70%;
-    margin: 1% 0 0 15%;
+    margin: 3% 0% 0 15%;
 }
 
 .top_buttons input {
@@ -645,8 +644,8 @@ select {
 
 .main_buttons input {
     text-align: center;
-    width: 18%;
-    height: 8vh;
+    width: 25%;
+    height: 10vh;
     color: white;
     font-size: 3vh;
     font-weight: 600;
@@ -959,8 +958,8 @@ select {
         line-height: 0;
     }
     .btn_normal {
-        width: 5.3vw;
-        height: 5.3vw;
+        width: 7vw;
+        height: 7vw;
     }
     .weight {
         height: 20vh;
@@ -974,10 +973,10 @@ select {
         margin-left: 31.5%;
     }
     .summ tr:first-child {
-        font-size: 3vw;
+        font-size: 4vw;
     }
     .summ tr {
-        font-size: 2.5vw;
+        font-size: 3.2vw;
     }
     .control_buttons {
         width: 60%;
@@ -1026,7 +1025,6 @@ select {
     }
     #calc-toggle {
         display: inline-block;
-        margin-left: 100px;
         z-index: 2;
     }
     #dark {
